Tarification,types de chambre,chambres and starting reservation
